chore: do not test on Windows — for now

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
   unit:
     strategy:
       matrix:
-        os: [ ubuntu-latest, macOS-latest, windows-latest ]
+        os: [ ubuntu-latest, macOS-latest ]
 
     name: Run unit tests on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
