--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
 
       - name: Set up Go
         uses: actions/setup-go@v2
@@ -45,5 +47,9 @@ jobs:
         run: go build -v ./...
 
       - name: Test
-        run: go test -v ./...
+        run: go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
+        timeout-minutes: 1
+
+      - name: Upload coverage to Codecov
+        run: bash <(curl -s https://codecov.io/bash)
         timeout-minutes: 1
