--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,4 +52,6 @@ jobs:
 
       - name: Upload coverage to Codecov
         run: bash <(curl -s https://codecov.io/bash)
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         timeout-minutes: 1
